src/test/ui/extern/extern-types-not-sync-send.stderr
error[E0277]: `A` cannot be shared between threads safely
  --> $DIR/extern-types-not-sync-send.rs:13:19
   |
LL | fn assert_sync<T: ?Sized + Sync>() {}
   |                            ---- required by this bound in `assert_sync`
...
LL |     assert_sync::<A>();
   |                   ^ `A` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `A`

error[E0277]: `A` cannot be sent between threads safely
  --> $DIR/extern-types-not-sync-send.rs:16:19
   |
LL | fn assert_send<T: ?Sized + Send>() {}
   |                            ---- required by this bound in `assert_send`
...
LL |     assert_send::<A>();
   |                   ^ `A` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `A`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
